# rover_simulation

./: README.md
desert5/: model.config  model.sdf
rover/: CMakeLists.txt  package.xml  rover.kdev4  urdf.rviz
rover/.kdev4/: rover.kdev4
rover/config/: control.yaml  joint_names_Rover.yaml
rover/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
rover/launch/: desert.launch  display.launch  gazebo.launch  start.launch
rover/meshes/: base_link.STL  left_back_wheel.STL  left_front_wheel.STL  left_leg_lower.STL  left_leg_upper.STL  left_mid_wheel.STL  right_back_wheel.STL  right_front_wheel.STL  right_leg_lower.STL  right_leg_upper.STL  right_mid_wheel.STL
rover/src/: rover_base_controller.cpp  rover_image_saver.cpp  rover_odom_publisher.cpp  rover_video_saver.cpp
rover/urdf/: rover.csv  rover.urdf.xacro  rover.urdf.xacro.bak
